--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Amelia Ikeda <amelia@r-a-d.io>",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.13.3",
     "lodash": "^3.10.1",
     "xml2js": "^0.4.15"
   }
