--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "lodash": "^3.10.1",
+    "minimist": "^1.2.0",
     "xml2js": "^0.4.15"
   }
 }
